[project]
name = "ai-summarizeer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "groq>=1.2.0",
    "langchain>=1.2.16",
    "langchain-community>=0.4.1",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "streamlit>=1.57.0",
]
